<resources>
    <string name="app_name" translatable="false">IT-A News</string>

    <string name="google_map_api_key" translatable="false">AIzaSyAj3AqhGq9qgT9YT0StzxkwCwlSdQkTx9I</string>

    <string name="global_error">Something went wrong…</string>

    // Screens
    <string name="fragment_article_title">News Article</string>
    <string name="fragment_list_title">News List</string>
    <string name="fragment_search_title">News Search</string>
    <string name="fragment_saved_title">Saved news</string>
    <string name="fragment_map_title">Map</string>
    <string name="fragment_settings_title">News Settings</string>
    <string name="fragment_settings_display_title">Display Settings</string>
    <string name="fragment_settings_language_title">Language Settings</string>

    // Article
    <string name="save_article">Article saved successfully</string>
    <string name="delete_article">Successfully deleted article</string>
    <string name="undo">Undo</string>

    // Bottom navigation
    <string name="bottom_menu_home_title">Home</string>
    <string name="bottom_menu_search_title">Search</string>
    <string name="bottom_menu_saved_title">Saved</string>
    <string name="bottom_menu_settings_title">Settings</string>
    <string name="bottom_menu_map_title">Map</string>

    // Settings //
    // Day/Night mode
    <string name="settings_day_night_mode_title">Display mode</string>
    <string name="button_day_mode">Day</string>
    <string name="button_night_mode">Night</string>
    <string name="button_default_mode">System</string>
    // Language
    <string name="settings_language_mode_title">Language</string>
    <string name="button_language_en">English</string>
    <string name="button_language_ru">Russian</string>

    // News item
    <string name="no_author">No author</string>
    <string name="text_title">This article does not contain title</string>
    <string name="text_description">This article does not contain description</string>
    <string name="no_search_request">No search results</string>

    // Category for Spinner on Home Screen
    <string-array name="news_category_list">
        <item>All news</item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>
</resources>