<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        style="@style/Theme.ITANews.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            style="@style/Theme.ITANews.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/fragment_settings_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_display_settings"
        style="@style/SettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings_day_night_mode_title"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_settings" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_radiog_day_night_mode"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_display_settings">

        <RadioGroup
            android:id="@+id/radiog_day_night_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorOnPrimary">

            <RadioButton
                android:id="@+id/radiobtn_day"
                style="@style/RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_day_mode" />

            <RadioButton
                android:id="@+id/radiobtn_night"
                style="@style/RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_night_mode" />

            <RadioButton
                android:id="@+id/radiobtn_system"
                style="@style/RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_default_mode" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_language_settings"
        style="@style/SettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings_language_mode_title"
        app:layout_constraintTop_toBottomOf="@+id/cv_radiog_day_night_mode" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_radiog_language"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_language_settings">

        <RadioGroup
            android:id="@+id/radiog_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorOnPrimary">

            <RadioButton
                android:id="@+id/radiobtn_english"
                style="@style/RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_language_en" />

            <RadioButton
                android:id="@+id/radiobtn_russian"
                style="@style/RadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_language_ru" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>