<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings_display"
        style="@style/Theme.ITANews.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings_display"
            style="@style/Theme.ITANews.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/fragment_settings_display_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:id="@+id/radiog_day_night_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_settings_display">

        <RadioButton
            android:id="@+id/radiobtn_day"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_day_mode" />

        <RadioButton
            android:id="@+id/radiobtn_night"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_night_mode" />

        <RadioButton
            android:id="@+id/radiobtn_system"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_default_mode" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>