<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings_language"
        style="@style/Theme.ITANews.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings_language"
            style="@style/Theme.ITANews.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/fragment_settings_language_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:id="@+id/radiog_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_settings_language">

        <RadioButton
            android:id="@+id/radiobtn_english"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_language_en" />

        <RadioButton
            android:id="@+id/radiobtn_russian"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_language_ru" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>